home, about, product page responsive end

--- a/404.html
+++ b/404.html
@@ -36,8 +36,8 @@
                 </div>
                 <div class="header-menu d-none d-xl-block">
                     <ul>
-                        <li><a href="index.html">Ana səhifə</a></li>
-                        <li><a class="active" href="about.html">Haqqımızda</a></li>
+                        <li><a class="active" href="index.html">Ana səhifə</a></li>
+                        <li><a href="about.html">Haqqımızda</a></li>
                         <li><a href="products.html">Məhsullar</a></li>
                         <li><a href="gallery.html">Qalereya</a></li>
                         <li><a href="blog.html">Bloq</a></li>
@@ -63,26 +63,43 @@
             </nav>
             <div class="mobile-menu">
                 <ul class="mobile-nav">
-                    <li><a href="index.html">Ana səhifə</a></li>
-                    <li><a class="active" href="about.html">Haqqımızda</a></li>
+                    <li><a class="active" href="index.html">Ana səhifə</a></li>
+                    <li><a href="about.html">Haqqımızda</a></li>
                     <li><a href="products.html">Məhsullar</a></li>
                     <li><a href="gallery.html">Qalereya</a></li>
                     <li><a href="blog.html">Bloq</a></li>
                     <li><a href="contact.html">Əlaqə</a></li>
                 </ul>
+                <ul class="mobile-socials">
+                    <li>
+                        <a href="https://facebook.com/" target="_blank">
+                            <i class="fab fa-facebook-f"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://instagram.com/" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://youtube.com/" target="_blank">
+                            <i class="fab fa-youtube"></i>
+                        </a>
+                    </li>
+                </ul>
             </div>
         </div>
     </header>
-    <main id="products-content">
+    <main id="not-found-content">
         <section id="page-banner" class="about-pg">
             <div class="content-wrapper">
                 <div class="container container-md">
                     <div class="page-banner-content">
-                        <h1 class="page-heading">Products</h1>
+                        <h1 class="page-heading">404 NOT FOUND</h1>
                         <div class="page-nav">
                             <a href="index.html">Home</a>
                             <span> / </span>
-                            <span>Products</span>
+                            <span>404</span>
                         </div>
                     </div>
                 </div>
@@ -91,75 +108,12 @@
                 <img src="img/pattern/page-banner-curve.svg" alt="">
             </div>
         </section>
-        <section class="products">
-            <div class="container container-md">
-                <div class="row gy-5 gx-5">
-                    <div class="col-md-6 col-lg-4">
-                        <div class="product-box">
-                            <a href="product-inner.html">
-                                <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <span><del>$24.33</del>$13.25</span>
-                            </a>
-                            <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="product-box">
-                            <a href="product-inner.html">
-                                <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <span><del>$24.33</del>$13.25</span>
-                            </a>
-                            <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="product-box">
-                            <a href="product-inner.html">
-                                <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <span><del>$24.33</del>$13.25</span>
-                            </a>
-                            <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="product-box">
-                            <a href="product-inner.html">
-                                <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <span><del>$24.33</del>$13.25</span>
-                            </a>
-                            <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="product-box">
-                            <a href="product-inner.html">
-                                <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <span><del>$24.33</del>$13.25</span>
-                            </a>
-                            <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
-                        </div>
-                    </div>
-                    <div class="col-md-6 col-lg-4">
-                        <div class="product-box">
-                            <a href="product-inner.html">
-                                <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
-                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                <span><del>$24.33</del>$13.25</span>
-                            </a>
-                            <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
-                        </div>
-                    </div>
+        <section class="not-found">
+            <div class="container">
+                <div class="content-wrapper">
+                    <h2><span>Ooops.</span> Page Not Found!</h2>
+                    <p>The page you are looking for doesnt exist. Looks like you are in the wrong place. Let us guide you back!</p>
+                    <a href="index.html" class="btn-general">Geri dön</a>
                 </div>
             </div>
         </section>
@@ -170,8 +124,8 @@
         </div>
         <div class="content-wrapper">
             <div class="container container-md">
-                <div class="row gy-4">
-                    <div class="col-md-6 col-xl-4">
+                <div class="row g-5">
+                    <div class="col-lg-4">
                         <div class="footer-box">
                             <h4>Menu</h4>
                             <ul class="menu-list">
@@ -183,7 +137,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-6 col-xl-4">
+                    <div class="col-lg-4">
                         <div class="footer-box">
                             <h4>Contact info</h4>
                             <ul class="contact-list">
@@ -202,28 +156,26 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-md-12 col-xl-4">
-                        <div class="footer-box social">
-                            <div>
-                                <h4>Socials</h4>
-                                <ul class="social-list">
-                                    <li>
-                                        <a href="https://facebook.com/" target="_blank">
-                                            <i class="fab fa-facebook-f"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://instagram.com/" target="_blank">
-                                            <i class="fab fa-instagram"></i>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="https://youtube.com/" target="_blank">
-                                            <i class="fab fa-youtube"></i>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
+                    <div class="col-lg-4">
+                        <div class="footer-box">
+                            <h4>Socials</h4>
+                            <ul class="social-list">
+                                <li>
+                                    <a href="https://facebook.com/" target="_blank">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://instagram.com/" target="_blank">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="https://youtube.com/" target="_blank">
+                                        <i class="fab fa-youtube"></i>
+                                    </a>
+                                </li>
+                            </ul>
                             <div class="footer-logo">
                                 <a href="index.html">
                                     <!-- <img src="img/logo/logo-primary.svg" alt=""> -->
