--- a/about.html
+++ b/about.html
@@ -36,8 +36,8 @@
                 </div>
                 <div class="header-menu d-none d-xl-block">
                     <ul>
-                        <li><a class="active" href="index.html">Ana səhifə</a></li>
-                        <li><a href="about.html">Haqqımızda</a></li>
+                        <li><a href="index.html">Ana səhifə</a></li>
+                        <li><a class="active" href="about.html">Haqqımızda</a></li>
                         <li><a href="products.html">Məhsullar</a></li>
                         <li><a href="gallery.html">Qalereya</a></li>
                         <li><a href="blog.html">Bloq</a></li>
@@ -63,29 +63,12 @@
             </nav>
             <div class="mobile-menu">
                 <ul class="mobile-nav">
-                    <li><a class="active" href="index.html">Ana səhifə</a></li>
-                    <li><a href="about.html">Haqqımızda</a></li>
+                    <li><a href="index.html">Ana səhifə</a></li>
+                    <li><a class="active" href="about.html">Haqqımızda</a></li>
                     <li><a href="products.html">Məhsullar</a></li>
                     <li><a href="gallery.html">Qalereya</a></li>
                     <li><a href="blog.html">Bloq</a></li>
                     <li><a href="contact.html">Əlaqə</a></li>
-                </ul>
-                <ul class="mobile-socials">
-                    <li>
-                        <a href="https://facebook.com/" target="_blank">
-                            <i class="fab fa-facebook-f"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://instagram.com/" target="_blank">
-                            <i class="fab fa-instagram"></i>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="https://youtube.com/" target="_blank">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                    </li>
                 </ul>
             </div>
         </div>
@@ -129,7 +112,7 @@
         </section>
         <section class="contact">
             <div class="container container-md">
-                <div class="row g-5">
+                <div class="row gy-5 gx-5">
                     <div class="col-lg-4">
                         <div class="contact-box">
                             <i class="fas fa-clock"></i>
@@ -177,7 +160,7 @@
         </section>
         <section class="stats">
             <div class="container">
-                <div class="row g-0">
+                <div class="row gy-4 gx-0">
                     <div class="col-lg-4">
                         <div class="stat-box box-1">
                             <span class="counter">1,375</span>
@@ -205,7 +188,7 @@
             </div>
             <div class="content-wrapper">
                 <div class="section-pattern-1">
-                    <img src="img/pattern/bee-dots.png" alt="">
+                    <img src="img/pattern/triangle-2.png" alt="">
                 </div>
                 <div class="container container-md">
                     <div class="section-header">
@@ -213,7 +196,7 @@
                         <h1 class="section-heading-sm">About Us</h1>
                         <p>Our company was founded in 2001. Our honey is 100% natural. We bring to you honey straight from the hive, unheated, unprocessed, unpasteurized.</p>
                     </div>
-                    <div class="row g-5">
+                    <div class="row gy-5 gx-5">
                         <div class="col-lg-4">
                             <div class="who-we-are-box">
                                 <img src="img/who-we-are/certificate.png" alt="">
@@ -238,35 +221,32 @@
                     </div>
                 </div>
                 <div class="section-pattern-2">
-                    <img src="img/pattern/hexagon-6.png" alt="">
+                    <img src="img/pattern/dots.png" alt="">
                 </div>
-            </div>
-            <div class="section-curve">
-                <img src="img/pattern/section-curve-bottom.png" alt="">
             </div>
         </section>
         <section class="advantages">
             <div class="container container-md">
-                <div class="row">
-                    <div class="col-lg-3">
+                <div class="row gy-5 gx-0">
+                    <div class="col-md-6 col-lg-3">
                         <div class="advantage-box">
                             <i class="fas fa-check"></i>
                             <h5>Good choice</h5>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-md-6 col-lg-3">
                         <div class="advantage-box">
                             <i class="fas fa-money-bill-alt"></i>
                             <h5>Easy to order</h5>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-md-6 col-lg-3">
                         <div class="advantage-box">
                             <i class="fas fa-shield-alt"></i>
                             <h5>Quality assurance</h5>
                         </div>
                     </div>
-                    <div class="col-lg-3">
+                    <div class="col-md-6 col-lg-3">
                         <div class="advantage-box">
                             <i class="fas fa-people-carry"></i>
                             <h5>Fast shipping</h5>
@@ -282,8 +262,8 @@
         </div>
         <div class="content-wrapper">
             <div class="container container-md">
-                <div class="row g-5">
-                    <div class="col-lg-4">
+                <div class="row gy-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
                             <h4>Menu</h4>
                             <ul class="menu-list">
@@ -295,7 +275,7 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4">
+                    <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
                             <h4>Contact info</h4>
                             <ul class="contact-list">
@@ -314,26 +294,28 @@
                             </ul>
                         </div>
                     </div>
-                    <div class="col-lg-4">
-                        <div class="footer-box">
-                            <h4>Socials</h4>
-                            <ul class="social-list">
-                                <li>
-                                    <a href="https://facebook.com/" target="_blank">
-                                        <i class="fab fa-facebook-f"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://instagram.com/" target="_blank">
-                                        <i class="fab fa-instagram"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="https://youtube.com/" target="_blank">
-                                        <i class="fab fa-youtube"></i>
-                                    </a>
-                                </li>
-                            </ul>
+                    <div class="col-md-12 col-xl-4">
+                        <div class="footer-box social">
+                            <div>
+                                <h4>Socials</h4>
+                                <ul class="social-list">
+                                    <li>
+                                        <a href="https://facebook.com/" target="_blank">
+                                            <i class="fab fa-facebook-f"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://instagram.com/" target="_blank">
+                                            <i class="fab fa-instagram"></i>
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="https://youtube.com/" target="_blank">
+                                            <i class="fab fa-youtube"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
                             <div class="footer-logo">
                                 <a href="index.html">
                                     <!-- <img src="img/logo/logo-primary.svg" alt=""> -->
