--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="stylesheet" href="css/responsive.css" type="text/css">
 </head>
 <body>
+    <div class="preloader">
+        <img src="img/preloader.svg" alt="">
+    </div>
     <div class="bg-overlay" id="home"></div>
     <header id="header" class="primary-header">
         <div class="container">
