--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
                         <li class="d-none d-xl-block">
                             <a href="#">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Lorem ipsum, dolor sit amet consectetur.</span>
+                                <span>Qəbələ r. Bunud kəndi</span>
                             </a>
                         </li>
                         <li>
@@ -81,11 +81,11 @@
             <div class="content-wrapper">
                 <div class="container container-md">
                     <div class="page-banner-content">
-                        <h1 class="page-heading">Contact</h1>
+                        <h1 class="page-heading">Əlaqə</h1>
                         <div class="page-nav">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Ana səhifə</a>
                             <span> / </span>
-                            <span>Contact</span>
+                            <span>Əlaqə</span>
                         </div>
                     </div>
                 </div>
@@ -100,22 +100,22 @@
                     <div class="col-lg-4">
                         <div class="contact-box">
                             <i class="fas fa-clock"></i>
-                            <h2>11:00 am - 8:00 pm</h2>
-                            <p>Working Hours</p>
+                            <h2>08:00 - 22:00</h2>
+                            <p>İş vaxtı</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="contact-box">
                             <i class="fas fa-map-marker-alt"></i>
-                            <h2>Honey Springs 555</h2>
-                            <a href="#">Get Directions</a>
+                            <h2>Qəbələ r. Bunud kəndi</h2>
+                            <a href="#">Ünvan</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="contact-box">
                             <i class="fas fa-phone-alt"></i>
-                            <h2>(555) 111-4442</h2>
-                            <a href="tel:">Call Us Now</a>
+                            <h2>+99470 333 18 72</h2>
+                            <a href="tel:">Mobil nömrə</a>
                         </div>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                 <div class="row gy-4">
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Menu</h4>
+                            <h4>Səhifələr</h4>
                             <ul class="menu-list">
                                 <li><a href="#about">Haqqımızda</a></li>
                                 <li><a href="#product">Məhsullar</a></li>
@@ -143,7 +143,7 @@
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Contact info</h4>
+                            <h4>Əlaqə məlumatları</h4>
                             <ul class="contact-list">
                                 <li>
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
@@ -152,10 +152,10 @@
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Lorem ipsum dolor sit amet, consectetur.</a>
+                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Qəbələ rayon Bunud kəndi</a>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-clock"></i>11:00 am - 8:00 pm</p>
+                                    <p><i class="fas fa-clock"></i>08:00 - 22:00</p>
                                 </li>
                             </ul>
                         </div>
@@ -163,7 +163,7 @@
                     <div class="col-md-12 col-xl-4">
                         <div class="footer-box social">
                             <div>
-                                <h4>Socials</h4>
+                                <h4>Sosial şəbəkələr</h4>
                                 <ul class="social-list">
                                     <li>
                                         <a href="https://facebook.com/" target="_blank">
@@ -193,7 +193,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>Copyright ©2021 Hanio. All rights reserved.</p>
+                    <p>©2021 arıCI. Bütün hüquqlar qorunur.</p>
                 </div>
             </div>
         </div>
