--- a/about.html
+++ b/about.html
@@ -52,7 +52,7 @@
                         <li class="d-none d-xl-block">
                             <a href="#">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Lorem ipsum, dolor sit amet consectetur.</span>
+                                <span>Qəbələ r. Bunud kəndi</span>
                             </a>
                         </li>
                         <li>
@@ -81,11 +81,11 @@
             <div class="content-wrapper">
                 <div class="container container-md">
                     <div class="page-banner-content">
-                        <h1 class="page-heading">About Us Honey</h1>
+                        <h1 class="page-heading">Haqqımızda</h1>
                         <div class="page-nav">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Ana səhifə</a>
                             <span> / </span>
-                            <span>About Us Honey</span>
+                            <span>Haqqımızda</span>
                         </div>
                     </div>
                 </div>
@@ -104,10 +104,10 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="section-info">
-                            <h3 class="sub-heading">Who we are</h3>
-                            <h1 class="section-heading-sm">About Our Company</h1>
+                            <h3 class="sub-heading">Biz kimik?</h3>
+                            <h1 class="section-heading-sm">Komandamız haqqında</h1>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis ea iusto ipsa sed doloribus sequi amet sit error sint ipsam aliquam fugit quaerat ut placeat architecto, tenetur officia, rem est.</p>
-                            <a href="https://youtu.be/8z-27EJcMxc" class="btn-general" data-fancybox><i class="fas fa-play-circle"></i>Watch video</a>
+                            <a href="https://youtu.be/8z-27EJcMxc" class="btn-general" data-fancybox><i class="fas fa-play-circle"></i>Video izlə</a>
                         </div>
                     </div>
                 </div>
@@ -119,22 +119,22 @@
                     <div class="col-lg-4">
                         <div class="contact-box">
                             <i class="fas fa-clock"></i>
-                            <h2>11:00 am - 8:00 pm</h2>
-                            <p>Working Hours</p>
+                            <h2>08:00 - 22:00</h2>
+                            <p>İş vaxtı</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="contact-box">
                             <i class="fas fa-map-marker-alt"></i>
-                            <h2>Honey Springs 555</h2>
-                            <a href="#">Get Directions</a>
+                            <h2>Qəbələ r. Bunud kəndi</h2>
+                            <a href="#">Ünvan</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="contact-box">
                             <i class="fas fa-phone-alt"></i>
-                            <h2>(555) 111-4442</h2>
-                            <a href="tel:">Call Us Now</a>
+                            <h2>+99470 333 18 72</h2>
+                            <a href="tel:">Mobil nömrə</a>
                         </div>
                     </div>
                 </div>
@@ -147,8 +147,8 @@
                 </div>
                 <div class="container">
                     <div class="section-header">
-                        <h3 class="sub-heading">HOW WE PRODUCE HONEY</h3>
-                        <h1 class="section-heading-sm">Our Technology</h1>
+                        <h3 class="sub-heading">Balı necə hazırlayırıq?</h3>
+                        <h1 class="section-heading-sm">Metodlarımız</h1>
                         <p>To safely collect honey from a hive, beekeepers typically pacify the bees using a bee smoker.</p>
                     </div>
                     <div class="video-box">
@@ -167,19 +167,19 @@
                     <div class="col-lg-4">
                         <div class="stat-box box-1">
                             <span class="counter">1,375</span>
-                            <p>TONS OF HONEY WERE DELIVERED</p>
+                            <p>Ton bal istehsal etmişik</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="stat-box box-2">
                             <span class="counter">10</span>
-                            <p>MILLION BEES ON OUR FARM</p>
+                            <p>Milyon arımız var</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="stat-box box-3">
                             <span class="counter">61</span>
-                            <p>HECTARES OF OUR FIELDS</p>
+                            <p>Hektarlıq sahəmiz var</p>
                         </div>
                     </div>
                 </div>
@@ -195,29 +195,29 @@
                 </div>
                 <div class="container container-md">
                     <div class="section-header">
-                        <h3 class="sub-heading">INFORMATION</h3>
-                        <h1 class="section-heading-sm">About Us</h1>
+                        <h3 class="sub-heading">Niyə biz?</h3>
+                        <h1 class="section-heading-sm">Üstünlüklərimiz</h1>
                         <p>Our company was founded in 2001. Our honey is 100% natural. We bring to you honey straight from the hive, unheated, unprocessed, unpasteurized.</p>
                     </div>
                     <div class="row gy-5 gx-5">
                         <div class="col-lg-4">
                             <div class="who-we-are-box">
                                 <img src="img/who-we-are/certificate.png" alt="">
-                                <h4>Quality assurance</h4>
+                                <h4>Keyfiyyət nişanı</h4>
                                 <p>The quality of honey is our pride. But if you do not like the product, we will refund your money.</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="who-we-are-box">
                                 <img src="img/who-we-are/order.png" alt="">
-                                <h4>Easy to order</h4>
+                                <h4>Bir zənglə sifariş</h4>
                                 <p>You can select the product you are interested in and add to the cart. Or just call us!</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="who-we-are-box">
                                 <img src="img/who-we-are/bee.png" alt="">
-                                <h4>Fast shipping</h4>
+                                <h4>Sürətli çatdırılma</h4>
                                 <p>We are working only with the best delivery services. You can be sure our honey will be delivered to you safe and sound.</p>
                             </div>
                         </div>
@@ -234,25 +234,25 @@
                     <div class="col-md-6 col-lg-3">
                         <div class="advantage-box">
                             <i class="fas fa-check"></i>
-                            <h5>Good choice</h5>
+                            <h5>Əla seçim</h5>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="advantage-box">
                             <i class="fas fa-money-bill-alt"></i>
-                            <h5>Easy to order</h5>
+                            <h5>Rahat sifariş</h5>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="advantage-box">
                             <i class="fas fa-shield-alt"></i>
-                            <h5>Quality assurance</h5>
+                            <h5>Keyfiyyət nişanı</h5>
                         </div>
                     </div>
                     <div class="col-md-6 col-lg-3">
                         <div class="advantage-box">
                             <i class="fas fa-people-carry"></i>
-                            <h5>Fast shipping</h5>
+                            <h5>Sürətli çatdırılma</h5>
                         </div>
                     </div>
                 </div>
@@ -268,7 +268,7 @@
                 <div class="row gy-4">
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Menu</h4>
+                            <h4>Səhifələr</h4>
                             <ul class="menu-list">
                                 <li><a href="#about">Haqqımızda</a></li>
                                 <li><a href="#product">Məhsullar</a></li>
@@ -280,7 +280,7 @@
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Contact info</h4>
+                            <h4>Əlaqə məlumatları</h4>
                             <ul class="contact-list">
                                 <li>
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
@@ -289,10 +289,10 @@
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Lorem ipsum dolor sit amet, consectetur.</a>
+                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Qəbələ rayon Bunud kəndi</a>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-clock"></i>11:00 am - 8:00 pm</p>
+                                    <p><i class="fas fa-clock"></i>08:00 - 22:00</p>
                                 </li>
                             </ul>
                         </div>
@@ -300,7 +300,7 @@
                     <div class="col-md-12 col-xl-4">
                         <div class="footer-box social">
                             <div>
-                                <h4>Socials</h4>
+                                <h4>Sosial şəbəkələr</h4>
                                 <ul class="social-list">
                                     <li>
                                         <a href="https://facebook.com/" target="_blank">
@@ -330,7 +330,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>Copyright ©2021 Hanio. All rights reserved.</p>
+                    <p>©2021 arıCI. Bütün hüquqlar qorunur.</p>
                 </div>
             </div>
         </div>
