--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
                         <li class="d-none d-xl-block">
                             <a href="#">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Lorem ipsum, dolor sit amet consectetur.</span>
+                                <span>Qəbələ r. Bunud kəndi</span>
                             </a>
                         </li>
                         <li>
@@ -81,11 +81,11 @@
             <div class="content-wrapper">
                 <div class="container container-md">
                     <div class="page-banner-content">
-                        <h1 class="page-heading">Blog</h1>
+                        <h1 class="page-heading">Bloq</h1>
                         <div class="page-nav">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Ana səhifə</a>
                             <span> / </span>
-                            <span>Blog</span>
+                            <span>Bloq</span>
                         </div>
                     </div>
                 </div>
@@ -103,7 +103,7 @@
                                 <img src="img/blog/blog-item-1.jpg" alt="">
                             </div>
                             <div class="box-text">
-                                <h2>How many calories are in honey?</h2>
+                                <h2>Bloq - mözvu başlığı 1.</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita error sed deserunt obcaecati nisi temporibus commodi...</p>
                                 <div class="wave-line"></div>
                                 <div class="box-meta-info">
@@ -119,7 +119,7 @@
                                 <img src="img/blog/blog-item-2.jpg" alt="">
                             </div>
                             <div class="box-text">
-                                <h2>How many calories are in honey?</h2>
+                                <h2>Bloq - mözvu başlığı 2.</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita error sed deserunt obcaecati nisi temporibus commodi...</p>
                                 <div class="wave-line"></div>
                                 <div class="box-meta-info">
@@ -135,7 +135,7 @@
                                 <img src="img/blog/blog-item-3.jpg" alt="">
                             </div>
                             <div class="box-text">
-                                <h2>How many calories are in honey?</h2>
+                                <h2>Bloq - mözvu başlığı 3.</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita error sed deserunt obcaecati nisi temporibus commodi...</p>
                                 <div class="wave-line"></div>
                                 <div class="box-meta-info">
@@ -151,7 +151,7 @@
                                 <img src="img/blog/blog-item-4.jpg" alt="">
                             </div>
                             <div class="box-text">
-                                <h2>How many calories are in honey?</h2>
+                                <h2>Bloq - mözvu başlığı 4.</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita error sed deserunt obcaecati nisi temporibus commodi...</p>
                                 <div class="wave-line"></div>
                                 <div class="box-meta-info">
@@ -167,7 +167,7 @@
                                 <img src="img/blog/blog-item-5.jpg" alt="">
                             </div>
                             <div class="box-text">
-                                <h2>How many calories are in honey?</h2>
+                                <h2>Bloq - mözvu başlığı 5.</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita error sed deserunt obcaecati nisi temporibus commodi...</p>
                                 <div class="wave-line"></div>
                                 <div class="box-meta-info">
@@ -183,7 +183,7 @@
                                 <img src="img/blog/blog-item-7.jpg" alt="">
                             </div>
                             <div class="box-text">
-                                <h2>How many calories are in honey?</h2>
+                                <h2>Bloq - mözvu başlığı 7.</h2>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita error sed deserunt obcaecati nisi temporibus commodi...</p>
                                 <div class="wave-line"></div>
                                 <div class="box-meta-info">
@@ -206,7 +206,7 @@
                 <div class="row gy-4">
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Menu</h4>
+                            <h4>Səhifələr</h4>
                             <ul class="menu-list">
                                 <li><a href="#about">Haqqımızda</a></li>
                                 <li><a href="#product">Məhsullar</a></li>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Contact info</h4>
+                            <h4>Əlaqə məlumatları</h4>
                             <ul class="contact-list">
                                 <li>
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
@@ -227,10 +227,10 @@
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Lorem ipsum dolor sit amet, consectetur.</a>
+                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Qəbələ rayon Bunud kəndi</a>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-clock"></i>11:00 am - 8:00 pm</p>
+                                    <p><i class="fas fa-clock"></i>08:00 - 22:00</p>
                                 </li>
                             </ul>
                         </div>
@@ -238,7 +238,7 @@
                     <div class="col-md-12 col-xl-4">
                         <div class="footer-box social">
                             <div>
-                                <h4>Socials</h4>
+                                <h4>Sosial şəbəkələr</h4>
                                 <ul class="social-list">
                                     <li>
                                         <a href="https://facebook.com/" target="_blank">
@@ -268,7 +268,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>Copyright ©2021 Hanio. All rights reserved.</p>
+                    <p>©2021 arıCI. Bütün hüquqlar qorunur.</p>
                 </div>
             </div>
         </div>
