--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <li class="d-none d-xl-block">
                             <a href="#">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Lorem ipsum, dolor sit amet consectetur.</span>
+                                <span>Qəbələ r. Bunud kəndi</span>
                             </a>
                         </li>
                         <li>
@@ -83,10 +83,10 @@
                 <div class="row gy-4">
                     <div class="col-xl-6">
                         <div class="section-info">
-                            <h1 class="section-heading-lg primary">Sweet Honey</h1>
-                            <h1 class="section-heading-lg secondary">from our hive</h1>
+                            <h1 class="section-heading-lg primary">Təbii, şirin balı</h1>
+                            <h1 class="section-heading-lg secondary">bizdən alın.</h1>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis ea iusto ipsa sed doloribus sequi amet sit error sint ipsam aliquam fugit quaerat ut placeat architecto, tenetur officia, rem est.</p>
-                            <a href="products.html" class="btn-general">View products</a>
+                            <a href="products.html" class="btn-general">Məhsullara bax</a>
                             <img src="img/pattern/bee-dots.png" alt="">
                         </div>
                     </div>
@@ -104,22 +104,22 @@
                     <div class="col-lg-4">
                         <div class="contact-box">
                             <i class="fas fa-clock"></i>
-                            <h2>11:00 am - 8:00 pm</h2>
-                            <p>Working Hours</p>
+                            <h2>08:00 - 22:00</h2>
+                            <p>İş vaxtı</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="contact-box">
                             <i class="fas fa-map-marker-alt"></i>
-                            <h2>Honey Springs 555</h2>
-                            <a href="#">Get Directions</a>
+                            <h2>Qəbələ r. Bunud kəndi</h2>
+                            <a href="#">Ünvan</a>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="contact-box">
                             <i class="fas fa-phone-alt"></i>
-                            <h2>(555) 111-4442</h2>
-                            <a href="tel:">Call Us Now</a>
+                            <h2>+99470 333 18 72</h2>
+                            <a href="tel:">Mobil nömrə</a>
                         </div>
                     </div>
                 </div>
@@ -135,10 +135,10 @@
                     </div>
                     <div class="col-xl-6">
                         <div class="section-info">
-                            <h3 class="sub-heading">INFORMATION</h3>
-                            <h1 class="section-heading-md">About Honey</h1>
+                            <h3 class="sub-heading">Biz kimik?</h3>
+                            <h1 class="section-heading-md">Haqqımızda</h1>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis ea iusto ipsa sed doloribus sequi amet sit error sint ipsam aliquam fugit quaerat ut placeat architecto, tenetur officia, rem est.</p>
-                            <a href="about.html" class="btn-general">Learn More</a>
+                            <a href="about.html" class="btn-general">Ətraflı oxu</a>
                         </div>
                     </div>
                 </div>
@@ -154,29 +154,29 @@
                 </div>
                 <div class="container container-md">
                     <div class="section-header">
-                        <h3 class="sub-heading">INFORMATION</h3>
-                        <h1 class="section-heading-sm">About Us</h1>
+                        <h3 class="sub-heading">Niyə biz?</h3>
+                        <h1 class="section-heading-sm">Üstünlüklərimiz</h1>
                         <p>Our company was founded in 2001. Our honey is 100% natural. We bring to you honey straight from the hive, unheated, unprocessed, unpasteurized.</p>
                     </div>
                     <div class="row gy-5 gx-5">
                         <div class="col-lg-4">
                             <div class="who-we-are-box">
                                 <img src="img/who-we-are/certificate.png" alt="">
-                                <h4>Quality assurance</h4>
+                                <h4>Keyfiyyət nişanı</h4>
                                 <p>The quality of honey is our pride. But if you do not like the product, we will refund your money.</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="who-we-are-box">
                                 <img src="img/who-we-are/order.png" alt="">
-                                <h4>Easy to order</h4>
+                                <h4>Bir zənglə sifariş</h4>
                                 <p>You can select the product you are interested in and add to the cart. Or just call us!</p>
                             </div>
                         </div>
                         <div class="col-lg-4">
                             <div class="who-we-are-box">
                                 <img src="img/who-we-are/bee.png" alt="">
-                                <h4>Fast shipping</h4>
+                                <h4>Sürətli çatdırılma</h4>
                                 <p>We are working only with the best delivery services. You can be sure our honey will be delivered to you safe and sound.</p>
                             </div>
                         </div>
@@ -193,19 +193,19 @@
                     <div class="col-lg-4">
                         <div class="stat-box box-1">
                             <span class="counter">1,375</span>
-                            <p>TONS OF HONEY WERE DELIVERED</p>
+                            <p>Ton bal istehsal etmişik</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="stat-box box-2">
                             <span class="counter">10</span>
-                            <p>MILLION BEES ON OUR FARM</p>
+                            <p>Milyon arımız var</p>
                         </div>
                     </div>
                     <div class="col-lg-4">
                         <div class="stat-box box-3">
                             <span class="counter">61</span>
-                            <p>HECTARES OF OUR FIELDS</p>
+                            <p>Hektarlıq sahəmiz var</p>
                         </div>
                     </div>
                 </div>
@@ -221,17 +221,17 @@
                 </div>
                 <div class="container container-md">
                     <div class="section-header">
-                        <h3 class="sub-heading">OUR BESTSELLERS</h3>
-                        <h1 class="section-heading-sm">Online Shop</h1>
+                        <h3 class="sub-heading">Ən çox satılanlar</h3>
+                        <h1 class="section-heading-sm">Top məhsullar</h1>
                     </div>
                     <div class="row gy-5 gx-5">
                         <div class="col-lg-4">
                             <div class="product-box">
                                 <a href="product-inner.html">
                                     <img src="img/products/product-1.png" alt="">
-                                    <h3>Organic Honey</h3>
+                                    <h3>Məhsul adı 1</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                    <span><del>$24.33</del>$13.25</span>
+                                    <span><del>24.33 AZN</del>13.25 AZN</span>
                                 </a>
                                 <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
                             </div>
@@ -240,9 +240,9 @@
                             <div class="product-box">
                                 <a href="product-inner.html">
                                     <img src="img/products/product-1.png" alt="">
-                                    <h3>Organic Honey</h3>
+                                    <h3>Məhsul adı 1</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                    <span><del>$24.33</del>$13.25</span>
+                                    <span><del>24.33 AZN</del>13.25 AZN</span>
                                 </a>
                                 <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
                             </div>
@@ -251,9 +251,9 @@
                             <div class="product-box">
                                 <a href="product-inner.html">
                                     <img src="img/products/product-1.png" alt="">
-                                    <h3>Organic Honey</h3>
+                                    <h3>Məhsul adı 1</h3>
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-                                    <span><del>$24.33</del>$13.25</span>
+                                    <span><del>24.33 AZN</del>13.25 AZN</span>
                                 </a>
                                 <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
                             </div>
@@ -277,8 +277,8 @@
             </div>
             <div class="container">
                 <div class="section-header">
-                    <h3 class="sub-heading">ABOUT OUR PRODUCTS</h3>
-                    <h1 class="section-heading-sm">Types Of Honey</h1>
+                    <h3 class="sub-heading">Məhsullarımız haqqında</h3>
+                    <h1 class="section-heading-sm">Bal növləri</h1>
                     <p>Take a look at the different types of honey we produce.</p>
                 </div>
                 <div class="content-wrapper">
@@ -286,36 +286,36 @@
                         <div class="col-xl-6">
                             <div class="honey-box box-1">
                                 <div class="box-text">
-                                    <h3>Organic Honey</h3>
+                                    <h3>Məhsul adı 1</h3>
                                     <p>Linden honey has a strong and very distinctive aroma. At first sniff…</p>
-                                    <a href="#">Learn more</a>
+                                    <a href="product-inner.html">Ətraflı oxu</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6">
                             <div class="honey-box box-2">
                                 <div class="box-text">
-                                    <h3>Organic Honey</h3>
+                                    <h3>Məhsul adı 1</h3>
                                     <p>Linden honey has a strong and very distinctive aroma. At first sniff…</p>
-                                    <a href="#">Learn more</a>
+                                    <a href="product-inner.html">Ətraflı oxu</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6">
                             <div class="honey-box box-3">
                                 <div class="box-text">
-                                    <h3>Organic Honey</h3>
+                                    <h3>Məhsul adı 1</h3>
                                     <p>Linden honey has a strong and very distinctive aroma. At first sniff…</p>
-                                    <a href="#">Learn more</a>
+                                    <a href="product-inner.html">Ətraflı oxu</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-xl-6">
                             <div class="honey-box box-4">
                                 <div class="box-text">
-                                    <h3>Organic Honey</h3>
+                                    <h3>Məhsul adı 1</h3>
                                     <p>Linden honey has a strong and very distinctive aroma. At first sniff…</p>
-                                    <a href="#">Learn more</a>
+                                    <a href="product-inner.html">Ətraflı oxu</a>
                                 </div>
                             </div>
                         </div>
@@ -333,7 +333,7 @@
                 <div class="row gy-4">
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Menu</h4>
+                            <h4>Səhifələr</h4>
                             <ul class="menu-list">
                                 <li><a href="#about">Haqqımızda</a></li>
                                 <li><a href="#product">Məhsullar</a></li>
@@ -345,7 +345,7 @@
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Contact info</h4>
+                            <h4>Əlaqə məlumatları</h4>
                             <ul class="contact-list">
                                 <li>
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
@@ -354,10 +354,10 @@
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Lorem ipsum dolor sit amet, consectetur.</a>
+                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Qəbələ rayon Bunud kəndi</a>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-clock"></i>11:00 am - 8:00 pm</p>
+                                    <p><i class="fas fa-clock"></i>08:00 - 22:00</p>
                                 </li>
                             </ul>
                         </div>
@@ -365,7 +365,7 @@
                     <div class="col-md-12 col-xl-4">
                         <div class="footer-box social">
                             <div>
-                                <h4>Socials</h4>
+                                <h4>Sosial şəbəkələr</h4>
                                 <ul class="social-list">
                                     <li>
                                         <a href="https://facebook.com/" target="_blank">
@@ -395,7 +395,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>Copyright ©2021 Hanio. All rights reserved.</p>
+                    <p>©2021 arıCI. Bütün hüquqlar qorunur.</p>
                 </div>
             </div>
         </div>
