--- a/product-inner.html
+++ b/product-inner.html
@@ -52,7 +52,7 @@
                         <li class="d-none d-xl-block">
                             <a href="#">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Lorem ipsum, dolor sit amet consectetur.</span>
+                                <span>Qəbələ r. Bunud kəndi</span>
                             </a>
                         </li>
                         <li>
@@ -81,13 +81,13 @@
             <div class="content-wrapper">
                 <div class="container container-md">
                     <div class="page-banner-content">
-                        <h1 class="page-heading">Jamun Honey</h1>
+                        <h1 class="page-heading">Məhsul adı 1</h1>
                         <div class="page-nav">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Ana səhifə</a>
                             <span> / </span>
-                            <a href="products.html">Products</a>
+                            <a href="products.html">Məhsullar</a>
                             <span> / </span>
-                            <span>Jamun Honey</span>
+                            <span>Məhsul adı 1</span>
                         </div>
                     </div>
                 </div>
@@ -135,8 +135,8 @@
                         <div class="col-lg-7">
                             <div class="product-text">
                                 <div class="wave-line"></div>
-                                <h2>Organic Honey</h2>
-                                <span><del>$24.33</del>$13.25</span>
+                                <h2>Məhsul adı 1</h2>
+                                <span><del>24.33 AZN</del>13.25 AZN</span>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis, debitis odio. Enim aliquam voluptate neque dolore omnis nulla, iure amet, expedita sunt, distinctio vel officia quo? Quam nobis animi architecto? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Praesentium enim consequuntur voluptatem repellat, quae minima molestias voluptas alias rerum culpa illo. Sed deserunt, porro nostrum voluptate reprehenderit soluta recusandae odit!</p>
                                 <div class="wave-line"></div>
                                 <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
@@ -149,7 +149,7 @@
         </section>
         <section class="product-desc">
             <div class="container container-md">
-                <h3 class="inner-section-heading">Description</h3>
+                <h3 class="inner-section-heading">Açıqlama</h3>
                 <div class="content-wrapper">
                     <div class="product-desc-box">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero repellat ipsa corporis sed totam sunt laudantium, aspernatur eveniet, ab numquam aperiam quis hic tenetur consequuntur, enim quas mollitia quia! Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias labore ipsum pariatur sint eligendi aliquid accusamus vitae corporis. Quasi optio distinctio quibusdam asperiores vel laborum? Excepturi iure fuga perferendis inventore. <br><br> Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident libero repellat ipsa corporis sed totam sunt laudantium, aspernatur eveniet, ab numquam aperiam quis hic tenetur consequuntur, enim quas mollitia quia! Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
@@ -159,15 +159,15 @@
         </section>
         <section class="related-products">
             <div class="container container-md">
-                <h3 class="inner-section-heading">Related products</h3>
+                <h3 class="inner-section-heading">Əlaqəli məhsullar</h3>
                 <div class="content-wrapper">
                     <div class="row gy-5 gx-5">
                         <div class="col-md-6 col-lg-4">
                             <div class="product-box">
                                 <a href="product-inner.html">
                                     <img src="img/products/product-1.png" alt="">
-                                    <h3>Organic Honey</h3>
-                                    <span><del>$24.33</del>$13.25</span>
+                                    <h3>Məhsul adı 1</h3>
+                                    <span><del>24.33 AZN</del>13.25 AZN</span>
                                 </a>
                                 <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
                             </div>
@@ -177,7 +177,7 @@
                                 <a href="product-inner.html">
                                     <img src="img/products/product-1.png" alt="">
                                     <h3>Organic Honey</h3>
-                                    <span><del>$24.33</del>$13.25</span>
+                                    <span><del>24.33 AZN</del>13.25 AZN</span>
                                 </a>
                                 <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
                             </div>
@@ -187,7 +187,7 @@
                                 <a href="product-inner.html">
                                     <img src="img/products/product-1.png" alt="">
                                     <h3>Organic Honey</h3>
-                                    <span><del>$24.33</del>$13.25</span>
+                                    <span><del>24.33 AZN</del>13.25 AZN</span>
                                 </a>
                                 <a href="#" class="btn-general order"><i class="fas fa-phone-alt"></i>Sifariş et</a>
                             </div>
@@ -206,7 +206,7 @@
                 <div class="row gy-4">
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Menu</h4>
+                            <h4>Səhifələr</h4>
                             <ul class="menu-list">
                                 <li><a href="#about">Haqqımızda</a></li>
                                 <li><a href="#product">Məhsullar</a></li>
@@ -218,7 +218,7 @@
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Contact info</h4>
+                            <h4>Əlaqə məlumatları</h4>
                             <ul class="contact-list">
                                 <li>
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
@@ -227,10 +227,10 @@
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Lorem ipsum dolor sit amet, consectetur.</a>
+                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Qəbələ rayon Bunud kəndi</a>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-clock"></i>11:00 am - 8:00 pm</p>
+                                    <p><i class="fas fa-clock"></i>08:00 - 22:00</p>
                                 </li>
                             </ul>
                         </div>
@@ -238,7 +238,7 @@
                     <div class="col-md-12 col-xl-4">
                         <div class="footer-box social">
                             <div>
-                                <h4>Socials</h4>
+                                <h4>Sosial şəbəkələr</h4>
                                 <ul class="social-list">
                                     <li>
                                         <a href="https://facebook.com/" target="_blank">
@@ -268,7 +268,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>Copyright ©2021 Hanio. All rights reserved.</p>
+                    <p>©2021 arıCI. Bütün hüquqlar qorunur.</p>
                 </div>
             </div>
         </div>
