--- a/products.html
+++ b/products.html
@@ -52,7 +52,7 @@
                         <li class="d-none d-xl-block">
                             <a href="#">
                                 <i class="fas fa-map-marker-alt"></i>
-                                <span>Lorem ipsum, dolor sit amet consectetur.</span>
+                                <span>Qəbələ r. Bunud kəndi</span>
                             </a>
                         </li>
                         <li>
@@ -81,11 +81,11 @@
             <div class="content-wrapper">
                 <div class="container container-md">
                     <div class="page-banner-content">
-                        <h1 class="page-heading">Products</h1>
+                        <h1 class="page-heading">Məhsullar</h1>
                         <div class="page-nav">
-                            <a href="index.html">Home</a>
+                            <a href="index.html">Ana səhifə</a>
                             <span> / </span>
-                            <span>Products</span>
+                            <span>Məhsullar</span>
                         </div>
                     </div>
                 </div>
@@ -101,7 +101,7 @@
                         <div class="product-box">
                             <a href="product-inner.html">
                                 <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
+                                <h3>Məhsul adı 1</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <span><del>$24.33</del>$13.25</span>
                             </a>
@@ -112,7 +112,7 @@
                         <div class="product-box">
                             <a href="product-inner.html">
                                 <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
+                                <h3>Məhsul adı 2</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <span><del>$24.33</del>$13.25</span>
                             </a>
@@ -123,7 +123,7 @@
                         <div class="product-box">
                             <a href="product-inner.html">
                                 <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
+                                <h3>Məhsul adı 3</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <span><del>$24.33</del>$13.25</span>
                             </a>
@@ -134,7 +134,7 @@
                         <div class="product-box">
                             <a href="product-inner.html">
                                 <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
+                                <h3>Məhsul adı 4</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <span><del>$24.33</del>$13.25</span>
                             </a>
@@ -145,7 +145,7 @@
                         <div class="product-box">
                             <a href="product-inner.html">
                                 <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
+                                <h3>Məhsul adı 5</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <span><del>$24.33</del>$13.25</span>
                             </a>
@@ -156,7 +156,7 @@
                         <div class="product-box">
                             <a href="product-inner.html">
                                 <img src="img/products/product-1.png" alt="">
-                                <h3>Organic Honey</h3>
+                                <h3>Məhsul adı 6</h3>
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                                 <span><del>$24.33</del>$13.25</span>
                             </a>
@@ -176,7 +176,7 @@
                 <div class="row gy-4">
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Menu</h4>
+                            <h4>Səhifələr</h4>
                             <ul class="menu-list">
                                 <li><a href="#about">Haqqımızda</a></li>
                                 <li><a href="#product">Məhsullar</a></li>
@@ -188,7 +188,7 @@
                     </div>
                     <div class="col-md-6 col-xl-4">
                         <div class="footer-box">
-                            <h4>Contact info</h4>
+                            <h4>Əlaqə məlumatları</h4>
                             <ul class="contact-list">
                                 <li>
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
@@ -197,10 +197,10 @@
                                     <a href="tel:+994703331872"><i class="fas fa-phone-alt"></i>+994703331872</a>
                                 </li>
                                 <li>
-                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Lorem ipsum dolor sit amet, consectetur.</a>
+                                    <a href="#"><i class="fas fa-map-marker-alt"></i>Qəbələ rayon Bunud kəndi</a>
                                 </li>
                                 <li>
-                                    <p><i class="fas fa-clock"></i>11:00 am - 8:00 pm</p>
+                                    <p><i class="fas fa-clock"></i>08:00 - 22:00</p>
                                 </li>
                             </ul>
                         </div>
@@ -208,7 +208,7 @@
                     <div class="col-md-12 col-xl-4">
                         <div class="footer-box social">
                             <div>
-                                <h4>Socials</h4>
+                                <h4>Sosial şəbəkələr</h4>
                                 <ul class="social-list">
                                     <li>
                                         <a href="https://facebook.com/" target="_blank">
@@ -238,7 +238,7 @@
                     </div>
                 </div>
                 <div class="copyright">
-                    <p>Copyright ©2021 Hanio. All rights reserved.</p>
+                    <p>©2021 arıCI. Bütün hüquqlar qorunur.</p>
                 </div>
             </div>
         </div>
